# CeleMod-wayland-native

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: localization.md  wayland-native-roadmap.md
scripts/: tauri-build.sh  tauri.sh
src/: App.tsx  i18n.ts  recommendations.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/backend/: blacklist.rs  celeste.rs  everest.rs  i18n.rs  install.rs  launch.rs  mod.rs  mods.rs  online.rs  paths.rs  runtime.rs  uninstall.rs
src/locales/: en-US.json  zh-CN.json
